2004-08-01 Gareth Jones <gareth_jones@users.berlios.de>

	* man/pkgunpack.1.in: Written.

	* man/prometheus.conf.5.in: Ammended for new logging options.

	* src/pkgbuild.in: Written.
	* man/pkgbuild.1.in: Written.

2004-07-31 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in (log): Much simplified, nicer output.

	* src/libprometheus.bash.in (pipestat): Added.
	* src/pkgunpack.in (apply_patches): Added call to pipestat after
	  `cat | patch' command.

	* src/libprometheus.bash.in (setup_logging): Reverted to piping to tee
	  instead of using process substitution, which is no longer needed.
	* src/libprometheus.bash.in (log): Added call to pipestat.

	* src/libprometheus.bash.in (logged_failure): Added.
	* src/libprometheus.bash.in (log): Added call to logged_failure.

2004-07-30 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in (list_files): Removed references to
	  $stage2_{archives,patches}.

	* src/libprometheus.bash.in (set_stage): Added.
	* src/pkgunpack.in: Changed `stage="$val"' to `set_stage "$val"'.

	* src/libprometheus.bash.in (unpack): Restored.
	* src/pkgunpack.in (unpack_archives): Restored from pkgadd 0.1.

	* src/libprometheus.bash.in (cat_file): Restored.
	* src/pkgunpack.in (apply_patches): Restored from pkgadd 0.1.

	* src/libprometheus.bash.in (override_var): Fixed quoting buglet.
	* src/libprometheus.bash.in (override_array): Fixed quoting buglet.

	* src/libprometheus.bash.in (setup_logging): Set $logfile to /dev/null
	  if both logging & terminal output disabled.
	* src/libprometheus.bash.in (log): Added.
	* src/pkgunpack.in (apply_patches): Added logging to patch command.

2004-07-29 Gareth Jones <gareth_jones@users.berlios.de>

	* src/libprometheus.bash.in (add_profile): Call error instead of
	  failure if profile not found.

	* All files: Changed Gareth Jones' email address to
	  <gareth_jones@users.berlios.de>.

2004-07-24 Gareth Jones <gareth_jones@users.berlios.de>
