@@ -17,3 +17,95 @@
 # You should have received a copy of the GNU General Public License along with
 # this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 # Place, Suite 330, Boston, MA  02111-1307  USA
+
+# Global prometheus functions.
+source "%LIBPROMETHEUS%" || exit 1
+
+# Usage: usage
+# Print help text.
+function usage {
+	cat <<-EOF
+Usage:
+${0##*/} [<options>] <package_list>
+
+Run packages' testsuites in the order given on the commandline.
+
+Package list:
+-f, --profile <profile> ...	Specify files containing package profiles
+-p, --package <package> ...	Specify packages by name (default)
+--				Treat remaining arguments as packages/profiles
+
+Options (must precede package list):
+-c, --config <config_file>	Specify alternative configuration file
+-s, --stage <stage_number>	Specify stage 0, 1 or 2 (default = 2)
+
+-h, -?, --help			Show this help screen
+-v, --version			Show version information
+
+	EOF
+	finish
+}
+
+# --------------------------- START EXECUTION HERE --------------------------- #
+
+# Check for options.
+while [[ "$1" == -* ]]; do
+	case "$1" in
+		(-c|--config)			config="$2"
+						shift ;;
+
+		(--config=*)			config="${1#--config=}" ;;
+
+		(-f|--profile|-p|--package)	break ;;
+
+		(-h|-\?|--help)			usage ;;
+
+		(-s|--stage)			set_stage "$2"
+						shift ;;
+
+		(--stage=*)			set_stage "${1#--stage=}" ;;
+
+		(-v|--version)			version ;;
+
+		(--)				shift
+						break ;;
+
+		(*)		script_usage_err "unrecognized option: $1"
+	esac
+	shift
+done
+
+source_config
+find_profiles "$@"
+
+# If there is more than one package, check each in its own instance.
+if (( ${#profile_list[@]} > 1 )); then
+	for profile in "${profile_list[@]}"; do
+		"$0" --config="$config" --stage=$stage --profile "$profile" ||
+		error "failed in $profile"
+	done
+	finish
+fi
+
+# There is only one package to check.  Do so in this instance.
+open_package "${profile_list[0]}"
+
+# Only run check if told to.
+if [[ "$check" == yes ]]; then
+
+	# If we have check commands, run them in the package's source directory.
+	if is_func check_pkg; then
+		cd "$directory" &&
+		log check_pkg ||
+		error "$name checksuite failed"
+	else
+
+		# No commands for checking package.  Warn user but don't fail;
+		# this is more likely a configuration error than a package
+		# error.
+		log_warning "no check_pkg function in $profile"
+		log_warning "skipped checks for $name"
+	fi
+fi
+
+finish
